# ecom_data_vault

./: .gitignore  README.md  dbt_project.yml  pyproject.toml
macros/: generate_schema_name.sql
models/raw_data_vault/looker_ecommerce/: _looker_ecommerce__sources.yml  hub_distribution_center.sql  hub_inventory.sql  hub_product.sql  hub_user.sql  lnkn_user_order.sql  sat_looker_ecommerce_user_order_status.sql
models/raw_stage/looker_ecommerce/: _looker_ecommerce__sources.yml  vw_rstg_looker_ecommerce__distribution_centers.sql  vw_rstg_looker_ecommerce__events.sql  vw_rstg_looker_ecommerce__inventory_items.sql  vw_rstg_looker_ecommerce__order_items.sql  vw_rstg_looker_ecommerce__orders.sql  vw_rstg_looker_ecommerce__products.sql  vw_rstg_looker_ecommerce__users.sql
models/stage/looker_ecommerce/: _looker_ecommerce__sources.yml  vw_stg_looker_ecommerce__distribution_centers.sql  vw_stg_looker_ecommerce__events.sql  vw_stg_looker_ecommerce__inventory_items.sql  vw_stg_looker_ecommerce__order_items.sql  vw_stg_looker_ecommerce__orders.sql  vw_stg_looker_ecommerce__products.sql  vw_stg_looker_ecommerce__users.sql
